--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,11 @@
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
     crossorigin="anonymous"
   >
-
+  <link
+    rel="shortcut icon"
+    href="../img/logo.png"
+    type="image/x-icon"
+  >
   <link
     rel="stylesheet"
     href="../css/style.css"
@@ -24,7 +28,10 @@
 <body>
   <header>
     <div>
-      <a href="#">ELAX Asigurări</a>
+      <a href="#"><img
+          src="../img/logo.png"
+          alt="ELAX Asigurări"
+        ></a>
     </div>
 
     <nav>
@@ -34,7 +41,7 @@
     </nav>
   </header>
   <div class="banner">
-    <h1>SC ASIGELAX SRL</h1>
+    <h1>ELAX Asigurări</h1>
   </div>
   <section id="about">
     <h2>Despre Noi</h2>
@@ -59,21 +66,41 @@
   </section>
 
   <section id="assurances">
-    <div class="rca">RCA</div>
-    <div class="casco">Casco</div>
-    <div class="home">Casa</div>
-    <div class="life">Viata</div>
-    <div class="health">Sanatate</div>
-    <div class="travel">Calatorie</div>
-    <div class="cmr">CMR</div>
-    <div class="malpraxis">Malpraxis</div>
+    <div class="rca">
+      <p>RCA</p>
+    </div>
+    <div class="casco">
+      <p>Casco</p>
+    </div>
+    <div class="home">
+      <p>Casă</p>
+    </div>
+    <div class="life">
+      <p>Viață</p>
+    </div>
+    <div class="health">
+      <p>Sănătate</p>
+    </div>
+    <div class="travel">
+      <p>Călătorie</p>
+    </div>
+    <div class="cmr">
+      <p>CMR</p>
+    </div>
+    <div class="malpraxis">
+      <p>Malpraxis</p>
+    </div>
   </section>
 
   <section id="offers">
 
   </section>
   <footer>
-
+    <p>Creat de <a
+        href="https://www.everymatrix.academy"
+        target="_blank"
+        rel="noopener noreferrer"
+      >EM Kids Academy©</a>.</p>
   </footer>
 
   <!-- scripts -->
