--- a/html/index.html
+++ b/html/index.html
@@ -23,26 +23,53 @@
     href="../css/style.css"
   >
 
-  <title>ELAX Asigurări</title>
+  <title>
+    ELAX Asigurări
+  </title>
 </head>
 <body>
   <header>
     <div>
-      <a href="#"><img
+      <a
+        href="#"
+        id="anchor"
+      >
+        <img
           src="../img/logo.png"
           alt="ELAX Asigurări"
-        ></a>
+          class="logo"
+        >
+        <p>ELAX Asigurări</p>
+      </a>
     </div>
 
     <nav>
-      <a href="#about">Despre Noi</a>
-      <a href="#assurances">Asigurări</a>
-      <a href="#offers">Oferte</a>
+      <a
+        href="#about"
+        id="anchor"
+      >Despre Noi</a>
+      <a
+        href="#assurances"
+        id="anchor"
+      >Asigurări</a>
+      <a
+        href="#offers"
+        id="anchor"
+      >Oferte</a>
     </nav>
   </header>
+
+  <h1>
+    <img
+      src="../img/logo.png"
+      alt=""
+    >
+    ELAX Asigurări
+  </h1>
+
   <div class="banner">
-    <h1>ELAX Asigurări</h1>
   </div>
+
   <section id="about">
     <h2>Despre Noi</h2>
     <p class="description">
@@ -72,8 +99,11 @@
     <div class="casco">
       <p>Casco</p>
     </div>
-    <div class="home">
-      <p>Casă</p>
+    <div class="home-pad">
+      <p>Locuință PAD</p>
+    </div>
+    <div class="home-fac">
+      <p>Locuință Facultativ</p>
     </div>
     <div class="life">
       <p>Viață</p>
@@ -101,6 +131,8 @@
         target="_blank"
         rel="noopener noreferrer"
       >EM Kids Academy©</a>.</p>
+    <p>Ne puteți contacta la numărul nostru de telefon <a href="tel:+40723456789">0723 456 789</a> sau nu puteți trimite
+      un e-mail la adresa noastră <a href="mailto:contact@elax-asigurari.ro">contact@elax-asigurari.ro</a>.</p>
   </footer>
 
   <!-- scripts -->
@@ -116,5 +148,6 @@
   ></script>
 
   <script src="../js/index.js"></script>
+  <script src="../js/shrinkHeader.js"></script>
 </body>
 </html>
